feat: completed basic site!

--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -1,5 +1,16 @@
 .App {
   text-align: center;
+  background-color: #282c34;
+}
+
+.cards {
+  display: flex; 
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  .card {
+    margin: 10px;
+  }
 }
 
 .App-logo {
