--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -1,6 +1,5 @@
 .App {
   text-align: center;
-  background-color: #282c34;
 }
 
 .cards {
@@ -9,6 +8,7 @@
   justify-content: space-evenly;
   align-items: center;
   .card {
+    background-color: grey;
     margin: 10px;
   }
 }
